Add weather widget XML configurations and implement unit tests for use cases
- Created XML files for compact and expanded weather app widgets.
- Implemented unit tests for LoadHomeWeatherPageUseCase, LoadLifeIndexUseCase, RefreshAllCityWeatherCacheUseCase, RefreshWeatherWidgetUseCase, and additional UI components.
- Added PowerShell script for Android UI QA automation.
- Developed tests for WeatherLightContext and DebugWeatherOverride functionalities.
- Included tests for location permission handling and widget layout modes.